--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2548,7 +2548,7 @@
         "de":"geringer Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc chữa bệnh nhỏ",
+        "vi":"Thuốc Hồi Máu Ít",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2566,7 +2566,7 @@
         "de":"kleiner Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc chữa bệnh ít hơn",
+        "vi":"Thuốc Hồi Máu Bé",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2584,7 +2584,7 @@
         "de":"Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc hồi máu",
+        "vi":"Thuốc Hồi Máu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2602,7 +2602,7 @@
         "de":"Höherer Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc hồi máu lớn hơn",
+        "vi":"Thuốc Hồi Máu Nhiều",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2620,7 +2620,7 @@
         "de":"Überlegener Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc hồi máu cao cấp",
+        "vi":"Thuốc Hồi Máu Cao Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2638,7 +2638,7 @@
         "de":"Großer Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc hồi máu chính",
+        "vi":"Thuốc Hồi Máu Lớn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2656,7 +2656,7 @@
         "de":"Super Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc hồi máu siêu tốc",
+        "vi":"Thuốc Hồi Máu Siêu Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2674,7 +2674,7 @@
         "de":"Ultimativer Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc hồi máu cuối cùng",
+        "vi":"Thuốc Hồi Máu Thượng Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2692,7 +2692,7 @@
         "de":"Endloser Heiltrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc hồi máu bất tận",
+        "vi":"Thuốc Hồi Máu Bất Tận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2710,7 +2710,7 @@
         "de":"Instant Heilflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình hồi máu tức thì nhỏ",
+        "vi":"Bình Hồi Máu Tức Thì Nhỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2728,7 +2728,7 @@
         "de":"Höhere instant Heilflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình hồi máu tức thì trung",
+        "vi":"Bình Hồi Máu Tức Thì Trung",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2746,7 +2746,7 @@
         "de":"Große instant Heilflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình hồi máu chính tức thì lớn",
+        "vi":"Bình Hồi Máu Chính Tức Thì Lớn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2764,7 +2764,7 @@
         "de":"Instant Schnellheilflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình hồi máu tức thì siêu tốc",
+        "vi":"Bình Hồi Máu Tức Thì Cấp Tốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2782,7 +2782,7 @@
         "de":"Fortgeschrittene instant Heilflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình hồi máu tức thì siêu cấp",
+        "vi":"Bình Hồi Máu Tức Thì Siêu Cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2800,7 +2800,7 @@
         "de":"Magietrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc năng lượng",
+        "vi":"Thuốc Năng Lượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2818,7 +2818,7 @@
         "de":"Höherer Magietrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc năng lượng trung",
+        "vi":"Thuốc Năng Lượng Trung",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2836,7 +2836,7 @@
         "de":"Großer Magietrank",
         "jp":"",
         "pt":"",
-        "vi":"Thuốc năng lượng lớn",
+        "vi":"Thuốc Năng Lượng Lớn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2854,7 +2854,7 @@
         "de":"Instant Magieflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình năng lượng tức thì",
+        "vi":"Bình Năng Lượng Tức Thì",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2872,7 +2872,7 @@
         "de":"Höhere Instant Magieflasche",
         "jp":"",
         "pt":"",
-        "vi":"Bình ma thuật tức thì lớn hơn",
+        "vi":"Bình Ma Thuật Tức Thì Lớn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2890,7 +2890,7 @@
         "de":"Gelbes Celebeam Puder",
         "jp":"",
         "pt":"",
-        "vi":"Bột màu vàng",
+        "vi":"Bột Màu Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2908,7 +2908,7 @@
         "de":"Rotes Celebeam Puder",
         "jp":"",
         "pt":"",
-        "vi":"Bột màu đỏ",
+        "vi":"Bột Màu Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2926,7 +2926,7 @@
         "de":"Blaues Celebeam Puder",
         "jp":"",
         "pt":"",
-        "vi":"Bột màu xanh",
+        "vi":"Bột Màu Xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2944,7 +2944,7 @@
         "de":"Zersprungener Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá bị nứt màu vàng",
+        "vi":"Đá Nứt Màu Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2962,7 +2962,7 @@
         "de":"Zersprungener Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá bị nứt màu đỏ",
+        "vi":"Đá Nứt Màu Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2980,7 +2980,7 @@
         "de":"Zersprungener Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá bị nứt màu xanh",
+        "vi":"Đá Nứt Màu Xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2998,7 +2998,7 @@
         "de":"Roher Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá thô màu vàng",
+        "vi":"Đá Thô Màu Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3016,7 +3016,7 @@
         "de":"Roher Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá thô màu đỏ",
+        "vi":"Đá Thô Màu Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3034,7 +3034,7 @@
         "de":"Roher Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá thô màu xanh",
+        "vi":"Đá Thô Màu Xanh",
         "ar":"",
         "it":"",
         "pl":"",
