--- a/Translation/item.json
+++ b/Translation/item.json
@@ -341,6 +341,24 @@
         "th":"",
         "id":"Lainnya"
     },
+    "item.1.name":{
+        "en":"Gold Pile",
+        "fr":"Pile d'Or",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.100.name":{
         "en":"Trial Blade",
         "fr":"Epee d'entrainement",
