--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2001,7 +2001,7 @@
         "en":"Time Left: {0} sec",
         "fr":"Temps Restant: {0} sec",
         "es":"",
-	"ch":"剩餘時間:{0}秒",
+		"ch":"剩餘時間:{0}秒",
         "kr":"",
         "ru":"Осталось Времени: {0} сек",
         "tr":"",
@@ -2016,6 +2016,78 @@
         "id":"Waktu Tersisa: {0} dtk"
     },
     "skills.SOUL_GATHERING.amountLeft":{
+        "en":"Amount Left: {0}",
+        "fr":"Âmes Restante: {0}",
+        "es":"",
+        "ch":"剩餘數量:{0}",
+        "kr":"",
+        "ru":"Осталось Душ: {0}",
+        "tr":"",
+        "de":"Verbleibende Menge: {0}",
+        "jp":"",
+        "pt":"",
+        "vi":"Linh hồn còn lại: {0}",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":"Jumlah Tersisa: {0}"
+    },
+    "skills.GOLD_TOUCH.name":{
+        "en":"Gold Touch",
+        "fr":"Touché d'Or",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "skills.GOLD_TOUCH.description-1":{
+        "en":"Miraculous magic that can transform monsters into Magipoints. Can only be used on monsters of Comparable strength.",
+        "fr":"Magie miraculeuse qui peut transformer les monstres en magipoints. Ne peut être utilisé que sur des monstres de force comparable.",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "skills.GOLD_TOUCH.description-2":{
+        "en":"Can be used up to 3 times a day",
+        "fr":"Peut-être utilisé jusqu'à 3 fois par jour",
+        "es":"",
+        "ch":"一天之内可以使用3次.",
+        "kr":"",
+        "ru":"Можно использовать до 3 раз в день",
+        "tr":"",
+        "de":"Kann bis zu 3 mal täglich angewendet werden.",
+        "jp":"",
+        "pt":"",
+        "vi":"Bạn chỉ có thể sử dụng 3 lần một ngày",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":"Bisa digunakan hingga 3 kali sehari"
+    },
+    "skills.GOLD_TOUCH.amountLeft":{
         "en":"Amount Left: {0}",
         "fr":"Âmes Restante: {0}",
         "es":"",
