--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3455,6 +3455,42 @@
         "th":"",
         "id":"Tongkat Goblin"
     },
+    "item.10101.name":{
+        "en":"General Ring",
+        "fr":"Anneau du Général",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10102.name":{
+        "en":"Silver Fur",
+        "fr":"Fourrure Argentée",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.11000.name":{
         "en":"Energy Essence (Minor)",
         "fr":"Essence d'Energie (Mineure)",
