--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -71,6 +71,42 @@
         "th":"",
         "id":"Level yg dibutuhkan"
     },
+    "tooltip.item.spiritLevel":{
+        "en":"Spirit Lv",
+        "fr":"Nv Esprit",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.item.spiritSoulLevel":{
+        "en":"Soul Lv",
+        "fr":"Nv d'Âme",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "tooltip.item.mod-stats":{
         "en":"Mod Stats",
         "fr":"Mod Stats",
