--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -125,6 +125,42 @@
         "th":"",
         "id":""
     },
+    "tooltip.item.spirit.talent.title":{
+        "en":"Spirit Talent",
+        "fr":"Talent d'Esprit",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.item.spirit.talent.left":{
+        "en":"Points Left",
+        "fr":"Points Restants",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "tooltip.item.mod-stats":{
         "en":"Mod Stats",
         "fr":"Mod Stats",
