--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2842,5 +2842,113 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.spirit.title":{
+        "en":"Spirit",
+        "fr":"Esprit",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.nospirit.line1":{
+        "en":"You have no Spirit equiped",
+        "fr":"Vous n'avez aucune Esprit d'équipé",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.nospirit.line2":{
+        "en":"What is the Spirit",
+        "fr":"Qu'est-ce que l'Esprit",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.nospirit.line3":{
+        "en":"The Spirit is a special item that allow players to change into monsters. Players that have a Spirit, in addition to having enhanced stats, can change into their Spirit form and use skills that only Spirits can use.",
+        "fr":"L'Esprit est un objet spécial qui permet aux joueurs de prendre l'apparence des monstres. Les joueurs qui possèdent un Esprit, en plus de pouvoir bénéficier de son aide pour améliorer ses attributs, peuvent se transformer en Esprit, pour utiliser les sorts uniquement disponibles aux Esprits.",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.nospirit.line4":{
+        "en":"How to obtain a Spirit",
+        "fr":"Comment obtenir un Esprit",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.nospirit.line5":{
+        "en":"Most of monsters can be changed into Spirits. If you find a Spirit Egg, you can right click it to try to gather it's essence.<br> 1) Elite monsters can drop an egg.<br> 2) During instances, the boss and specials monsters can drop an egg.<br> 3) There is a small chance for world bosses to drop ab egg.<br> 4) The rarer the egg, the more powerful it is, and the more luck it has to hatch successfully.",
+        "fr":"La grande majorité de monstres peuvent se transformer en Esprit. Si vous trouvez un Oeuf d'Esprit, il vous suffit de fair un clic droit pour l'ouvrir et essayer d'en résupérer son essence.<br> 1) Les monstres élite peuvent laisser tomber un oeuf comme butin.<br> 2) Au cours des instances, le boss ou les monstres spéciaux peuvent laisser tomber des oeuf comme butin.<br> 3) Il y a aussi une petit probabilité pour que les Boss du monde laissent des oeufs comme butin.<br> 4) Plus un oeuf est rare, plus l'Esprit qu'il contient est puissant, et plus il auras de chance d'être récupéré avec succes.",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
