--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2950,5 +2950,59 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.spirit.soulLv":{
+        "en":"Soul Level: {0}",
+        "fr":"Niveau d'Âme: {0}",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.soulMaxLv":{
+        "en":"Max Lv {0}",
+        "fr":"Nv Max {0}",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.soul":{
+        "en":"Soul",
+        "fr":"Âme",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
