--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2969,7 +2969,7 @@
         "th":"",
         "id":""
     },
-    "UI.windows.spirit.soulMaxLv":{
+    "UI.windows.spirit.soulMaxLevel":{
         "en":"Max Lv {0}",
         "fr":"Nv Max {0}",
         "es":"",
