--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3005,6 +3005,60 @@
         "th":"",
         "id":""
     },
+    "UI.windows.spirit.stats":{
+        "en":"Stats",
+        "fr":"Stats",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.improvedStats":{
+        "en":"Improved Stats",
+        "fr":"Stats Améliorées",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.aptitudes":{
+        "en":"APT",
+        "fr":"APT",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.spirit.btn.absorb":{
         "en":"Absorb",
         "fr":"Absorber",
