--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -397,7 +397,7 @@
     },
     "tooltip.player-menu.group-disband":{
         "en":"Disband group",
-        "fr":"Disoudre le groupe",
+        "fr":"Dissoudre le groupe",
         "es":"Disolver el grupo",
         "ch":"解散隊伍",
         "kr":"",
