--- a/Translation/general.json
+++ b/Translation/general.json
@@ -73,7 +73,7 @@
     },
     "general.CURRENCY.TOKEN":{
         "en":"Token",
-        "fr":"Jeton",
+        "fr":"Coupon",
         "es":"",
         "ch":"魔能",
         "kr":"",
