--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3097,7 +3097,7 @@
     },
     "UI.windows.spirit.btn.refine":{
         "en":"Refine",
-        "fr":"Ajuster",
+        "fr":"Raffiner",
         "es":"",
         "ch":"",
         "kr":"",
