--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3149,6 +3149,24 @@
         "th":"",
         "id":""
     },
+    "UI.windows.spirit.btn.learn":{
+        "en":"Learn",
+        "fr":"Apprendre",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.spirit.btn.draw":{
         "en":"Draw",
         "fr":"Retirer",
@@ -3170,6 +3188,24 @@
     "UI.windows.spirit.talentPoint":{
         "en":"Talent Points",
         "fr":"Points de Talent",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.talentCost":{
+        "en":"Cost {0} Talent Points",
+        "fr":"Coûte {0} Points de Talent",
         "es":"",
         "ch":"",
         "kr":"",
