--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3256,5 +3256,77 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.spirit.stats.baseHP":{
+        "en":"Base HP",
+        "fr":"HP de base",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.stats.baseMP":{
+        "en":"Base MP",
+        "fr":"MP de base",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.stats.baseATK":{
+        "en":"Base ATK",
+        "fr":"ATK de base",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.stats.baseDEF":{
+        "en":"Base DEF",
+        "fr":"DEF de base",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
